# ngc-data-node

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  docker-compose.yml  flake.nix  generate_vcf.py  locustfile.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: sample.vcf
enclave/: pyproject.toml
enclave/src/: main.py
enclave/src/ngc_enclave/: audit.py  db.py  main.py  query.py
enclave/tests/: test_api.py  test_query.py  test_smoke.py
infra/ansible/: playbook.yml
infra/postgres/: init.sql
processor/: Cargo.toml
processor/benches/: benchmark.rs  vcf_benchmark.rs
processor/src/: anonymize.rs  lib.rs  main.rs  parquet.rs
scripts/: generate_vcf.py  locustfile.py
