[build-system]
requires = ["uv_build>=0.9.22,<0.11.0"]
build-backend = "uv_build"

[project]
name = "ngc-enclave"
version = "0.1.0"
description = "Secure Python API Enclave for National Genome Center Data"
authors = [
  { name = "Thorri Elis Halldoruson", email = "thorri@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.131.0",
    "pyarrow>=23.0.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.4.0",
    "duckdb>=1.1.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.30.0",
    "greenlet>=3.0.0",
    "locust>=2.17.1",
    "cachetools>=5.5.0"
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.2",
    "httpx>=0.27.0"
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
